@@ -72,6 +72,7 @@ extern int CDLogger_wndx, CDLogger_wndy;
 extern int GGConv_wndx, GGConv_wndy;
 extern int TasEdit_wndx, TasEdit_wndy;
 extern int MetaPosX,MetaPosY;
+extern int MLogPosX,MLogPosY;
 
 //Structure that contains configuration information
 static CFGSTRUCT fceuconfig[] = {
@@ -222,6 +223,8 @@ static CFGSTRUCT fceuconfig[] = {
 	AC(TextHookerPosY),
 	AC(MetaPosX),
 	AC(MetaPosY),
+	AC(MLogPosX),
+	AC(MLogPosY),
 
 	AC(pauseAfterPlayback),
 	AC(AFon),
