@@ -1510,6 +1510,11 @@ BEGIN
         BOTTOMMARGIN, 191
     END
 
+    "MESSAGELOG", DIALOG
+    BEGIN
+        BOTTOMMARGIN, 184
+    END
+
     "NETMOO", DIALOG
     BEGIN
         LEFTMARGIN, 10
